--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -5,7 +5,8 @@
   border-radius: 50%;
   cursor: pointer;
   font-size: 50px;
-  position: fixed;
+  z-index: 2;
+  position: absolute;
   bottom: 24px;
   right: 24px;
   font-weight: bold;
