--- a/src/TodoSearch/TodoSearch.css
+++ b/src/TodoSearch/TodoSearch.css
@@ -1,16 +1,14 @@
 .TodoSearch {
+  border-radius: 50px;
   background: #F9FBFC;
-  border-radius: 2px;
-  border: 2px solid #202329;
-  margin: 0 24px;
+  box-shadow:  20px 20px 60px #bebebe,
+             -20px -20px 60px #ffffff;
   height: 64px;
-  width: calc(100% - 62px);
+  width: calc(100% - 10px);
   font-size: 24px;
   text-align: center;
   font-family: 'Montserrat';
   font-weight: 400;
-  color: #1E1E1F;
-  box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.25);
 }
 
 .TodoSearch::placeholder {
